force-app/main/default/objects/Outage_Contact_Tool_Config__c/Outage_Contact_Tool_Config__c.object-meta.xml
<CustomObject>
    <label>Outage Contact Tool Config</label>
    <nameField>
        <label>Outage Contact Tool Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outage Contact Tool Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>