force-app/main/default/objects/Outage_Contact_Tool_Config__c/fields/Custom_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report_Id__c</fullName>
    <label>Custom Report Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>