force-app/main/default/objects/Outage_Contact_Tool_Config__c/fields/Districts_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Districts_to_Exclude__c</fullName>
    <description>The Outage Contact Tool wizard will process each District found in the Account object picklist unless it is specifically excluded here.</description>
    <inlineHelpText>The Outage Contact Tool wizard will process each District found in the Account object picklist unless it is specifically excluded here.</inlineHelpText>
    <label>Districts to Exclude</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B2C</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>CNR Strategic</fullName>
            </value>
            <value>
                <fullName>Consumer Content Services</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>East District 1</fullName>
            </value>
            <value>
                <fullName>East District 2</fullName>
            </value>
            <value>
                <fullName>East District 3</fullName>
            </value>
            <value>
                <fullName>East District 4</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>Leasing/Financial</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Midwest District 1</fullName>
            </value>
            <value>
                <fullName>Midwest District 2</fullName>
            </value>
            <value>
                <fullName>Midwest District 3</fullName>
            </value>
            <value>
                <fullName>Midwest District 4</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Notebook and MID Management Services</fullName>
            </value>
            <value>
                <fullName>ORMM East</fullName>
            </value>
            <value>
                <fullName>ORMM Midwest</fullName>
            </value>
            <value>
                <fullName>ORMM National</fullName>
            </value>
            <value>
                <fullName>ORMM OEM</fullName>
            </value>
            <value>
                <fullName>ORMM West</fullName>
            </value>
            <value>
                <fullName>QC Accounts</fullName>
            </value>
            <value>
                <fullName>QES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>