force-app/main/default/objects/Outage_Contact_Tool_Config__c/fields/Hardware_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Report_Id__c</fullName>
    <description>The unique ID of the report that is run at the end of the Outage Contact Tool wizard.  This is necessary until SFDC allows us to query the report metadata table.</description>
    <label>Hardware Report Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>