force-app/main/default/objects/Outage_Contact_Tool_Config__c/fields/NMC_System_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>NMC_System_Report_Id__c</fullName>
    <label>NMC System Report Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>